# dj-blog

./: LICENSE  docker-compose.yml  pyproject.toml
app/: Dockerfile  requirements.txt  setup.cfg
app/authorapp/: apps.py
app/blog/: settings.py  urls.py
app/blog/settings/: base.py  development.py
app/coreapp/: urls.py  views.py
app/coreapp/templates/: _base.html  home.html
app/static/css/: base.css
app/userapp/: admin.py  forms.py  models.py  tests.py
app/userapp/migrations/: 0001_initial.py
blog/: urls.py
blog/settings/: production.py  test.py
postgres/: Dockerfile
postgres/conf/: postgresql.conf
postgres/init/: init.sql  testdb_init.sql
