[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Mohidul Islam <mohidul.nu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
