# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = django-blog
description = A blog web application written in python django framework.
author = Mohidul Islam
author-email = mohidul.nu@gmail.com
license = MIT


# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 119
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
per-file-ignores = ./blog/settings/*.py:F401, F403

exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
